# toio-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
toio_mcp/: __init__.py  __main__.py  cube_manager.py  server.py
toio_mcp/tools/: __init__.py  indicator.py  motor.py  position.py  scanner.py
